--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./public/Logo.png" type="image/x-icon">
+    <!-- Font Shared -->
+    <link href="https://api.fontshare.com/v2/css?f[]=hoover@700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SportNexus</title>
   </head>
