--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Font Shared -->
     <link href="https://api.fontshare.com/v2/css?f[]=hoover@700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SportNexus</title>
+    <title>EliteClub</title>
   </head>
   <body>
     <div id="root"></div>
